# calendar-aqo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
migrations/2023-05-31-170114_calendar/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: mod.rs
